--- a/config.ini
+++ b/config.ini
@@ -1,1 +1,33 @@
 
+[kigconfig]
+log = True
+APP_ID = 7350195
+API_HASH = b4105c3fddc4474048dfe79683555d0c
+TOKEN = 6412599320:AAG-9kC-yWdAm3TCOlRcmc9Tnwmt9CVahVY
+OWNER_ID = 895373440
+OWNER_USERNAME = firespower
+SQLALCHEMY_DATABASE_URI = postgres://firespower:anuryaily@database-1.cwh8lrzkdknb.eu-north-1.rds.amazonaws.com:5432/anu
+MESSAGE_DUMP = -1001869258891
+GBAN_LOGS = -1001869258891
+SYS_ADMIN =
+LOAD =
+NO_LOAD = sed
+WEBHOOK = False
+SPB_MODE = True
+URL = None
+INFOPIC = True
+CERT_PATH = None
+PORT = 5000
+DEL_CMDS = True
+STRICT_GBAN = True
+BAN_STICKER =
+ALLOW_EXCL = True
+CUSTOM_CMD = False
+CASH_API_KEY = https://www.alphavantage.co/support/#api-key
+TIME_API_KEY = https://timezonedb.com/api
+WALL_API = https://wall.alphacoders.com/api.php
+spamwatch_api = https://t.me/SpamWatchBot
+SPAMMERS =
+LASTFM_API_KEY = https://www.last.fm/api/account/create
+BOT_API_URL = https://api.telegram.org/bot
+BOT_API_FILE_URL = https://api.telegram.org/file/bot
