--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,12 @@
 [kigconfig]
+
 log = True
 APP_ID = 7350195
-API_HASH = b4105c3fddc4474048dfe79683555d0c
-TOKEN = 6412599320:AAG-9kC-yWdAm3TCOlRcmc9Tnwmt9CVahVY
+API_HASH = 'b4105c3fddc4474048dfe79683555d0c'
+TOKEN = '6412599320:AAG-9kC-yWdAm3TCOlRcmc9Tnwmt9CVahVY'
 OWNER_ID = 817237333
-OWNER_USERNAME = firespower
-SQLALCHEMY_DATABASE_URI = postgres://fireispower:ilyaryaanu@database-2.cwh8lrzkdknb.eu-north-1.rds.amazonaws.com:5432/aryas
+OWNER_USERNAME = 'firespower'
+SQLALCHEMY_DATABASE_URI = 'postgres://fireispower:ilyaryaanu@database-2.cwh8lrzkdknb.eu-north-1.rds.amazonaws.com:5432/aryas'
 MESSAGE_DUMP = -1001869258891
 GBAN_LOGS = -1001869258891
 SYS_ADMIN =
